feat: update puzzles

--- a/src/data/chapters.yml
+++ b/src/data/chapters.yml
@@ -31,22 +31,10 @@
   - - 第一卷 卷首语
     - 电视机前的各位观众朋友们，如果你此时此刻正在为英语四六级挣扎，为考研英语茶饭不思，甚至为江苏高考英语夙夜忧叹，请在享受完本序章后自觉合上书回去复习。我们需要事先指出，本书是一本理科专业英语词汇的推断题集，因此任何对本书提升考生英语的期待都将仅停留在封面上。
     - 为了帮助读者更好地使用本书，我们拟定了一些做题必备条件：
-  - - 一、基础条件
-    - 1. 作为一名英语猜词者，你首先需要知道这世上有 24 种东西叫做英文字母。——如果你读到这里还深信不疑，那么你应该向本书的作者学习一下如何从 1 数到 25。
+  - - 1. 作为一名英语猜词者，你首先需要知道这世上有 24 种东西叫做英文字母。——如果你读到这里还深信不疑，那么你应该向本书的作者学习一下如何从 1 数到 25。
     - 小练习：快速朗读下列字母：CQVMLBUIRGOZHSD。如有障碍，建议你不要费任何脑力去欣赏接下来的内容。
   - - 2. 你需要对英语的构词特征有一个大概的认识，比如你不会贸然把两个 w 连写在一个词里。（除非卖萌 ww
     - 小练习：快速读出下列单词：vzlyg，tpdjir，wbhsqmf。如果你能够毫无障碍地用英语正确拼读这些单词，那么欢迎你来到地球。
-  - - 二、进阶条件
-    - 1. 你需要有一定的数学、物理、化学、生物、计算机的专业知识。（这也是我们要在一开始提出警告的原因之一。）
-    - 小练习：试计算
-    - '[CQ:image,file=https://shiki.shigma.xyz/preface-1a.png]'
-    - 如果你读到这里突然感到头晕目眩，那你就可以放心地使用这本书了。
-  - - 2. 你需要拥有制造颅内黑洞式幻术力场的能力。（这是一个专业术语，通俗的说法是脑洞。）
-    - 小练习：观察下图的双曲抛物面。你的感觉是：
-    - A. 反胃
-    - B. 饿了
-    - C. 其中心处的平均曲率为 0
-    - '[CQ:image,file=https://shiki.shigma.xyz/preface-1b.png]'
   - - 如果上述条件对你来说就像推开一家餐馆的门一样简单，那么接下来我们就可以开始点餐了。
 
 - id: Chapter-1
