--- a/src/data/questions.yml
+++ b/src/data/questions.yml
@@ -4,8 +4,9 @@
   meaning: n. [数] 数列
   hints:
   - 数学，名词
-  - (2)(5)(8) 相同
-  - (1)(2)(6)(1)(2), (3)(4)(5)(4)(5) 都是词 # sense, queue
+  - (2)(5)(8) 相同，其他字母各不相同
+  - (3)(4)(5)(4)(5), (3)(4)(5)(5)(6) 都是词 # queue, queen
+  - (1)(2)(6)(1)(8), (1)(7)(8)(6)(5) 是一个词 # sense, scene
   - (7)*(6)(1)(2)(3)(4)(5)(6)(7)(8) 是一个词 # consequence
 
 - id: 1-2
@@ -24,7 +25,7 @@
   meaning: n. [数] 多项式
   hints:
   - 数学，名词
-  - (2)(6) 相同，且与 (8)(9) 都不相同
+  - (2)(6) 相同
   - (1)(2)(3)(4), (7)(6)(5)(6) 都是前缀 # poly, mono
   - (7)(9)(8)(10), (10)(8)(3)(4) 都是词 # mail, lily
   - (1)(2)(3)(5)(7) 经排序是连续的字母
@@ -79,6 +80,7 @@
   - (1)(2)(3), (2)=(4)(5)(6) 都是前缀 # sub, ultra
   - (1)(4)(5) 经排序是连续的字母
   - (3)(6)(7) 经排序是连续的字母
+  - (1)(4)(5)(2)(7)(8) 是一个计算机术语 # struct
 
 - id: 1-9
   clue: =*===**=
@@ -88,8 +90,8 @@
   - 几何学，名词
   - 所有字母互不相同
   - (1)(8)(2) 是连续的字母
-  - (6)(7)(8) 是一个后缀 # oid
-  - (1)(2)(3)(4), (1)(2)(3)(4)(2)(5) 都是词 # cent, center
+  - (4)(5)(7) 是前缀，(6)(7)(8) 是后缀 # oid
+  - (8)(6)(1)(4)(5)(6)(3)(2) 是一个词 # doctrine
 
 - id: 1-10
   clue: '*=**=**='
@@ -99,6 +101,7 @@
   - 数学，化学，名词
   - 所有字母互不相同
   - (4)(8)(5)(6)(2)(3)(1) 是一个词 # antique
+  - (2)(3)(6)(1)(5), (2)(3)(6)(5)(1) 都是词 # quiet, quite
 
 - id: 1-11
   clue: '*==**=*='
@@ -108,6 +111,7 @@
   - 数学，形容词
   - 所有字母各不相同
   - (3)(4)(5)(6) 是数学术语，(3)(5)(6)(7) 是化学术语 # bias, base
+  - (3)(1)(6)(4)(2)(7)(6)(6) 是一个词 # business
 
 - id: 1-12
   clue: '*==*=*=='
@@ -117,6 +121,7 @@
   - 计算机，名词
   - (1)(3)(5) 经排序是连续的字母
   - (1)(2), (3)(4), (5)(6) 都是前缀 # en, co, di
+  - (3)(4)(6)(7)(3)(6)(5)(1)(2)(3)(1) 是一个词 # coincidence
 
 - id: 1.5-1
   answer: altitude
