--- a/src/data/questions.yml
+++ b/src/data/questions.yml
@@ -45,7 +45,7 @@
   answer: monotone
   meaning: adj. [数] 单调的
   hints:
-  - 分析学，形容词
+  - 数学，形容词
   - (2)(6) 相同，(3)(7) 相同
   - (1)(3)(2) 是连续的三个字母
   - (1)(2)(4)(3), (5)(6)(7)(8) 都是词 # moon, tone
@@ -91,7 +91,7 @@
   - 所有字母互不相同
   - (1)(8)(2) 是连续的字母
   - (4)(5)(7) 是前缀，(6)(7)(8) 是后缀 # oid
-  - (8)(6)(1)(4)(5)(6)(3)(2) 是一个词 # doctrine
+  - (8)(6)(1)(4)(5)(7)(3)(2) 是一个词 # doctrine
 
 - id: 1-10
   clue: '*=**=**='
@@ -213,11 +213,11 @@
   answer: derivative
   meaning: n. [数] 导数
   hints:
-  - 分析学，名词
+  - 数学，名词
   - 共有 4 个平方数
   - (2)(10) 相同，(4)(8) 相同，(5)(9) 相同
   - (3)(7)(9), (6)(2)(4) 都构成等差数列
-  - (1)(3)(4)(9)(10) 是一个词 # drive
+  - (1)(3)(4)(9)(10) 是计算机术语 # drive
 
 - id: 2-2
   clue: '*==*==*'
@@ -225,16 +225,17 @@
   meaning: n. [物] 冲量；脉冲
   hints:
   - 物理学，名词
+  - 最大字母两侧都是偶数
   - (4)(2)(7) 构成等差数列
   - (1)(5)(3) 构成等比数列
-  - (3)(4)(5)(6)(7), (6)(5)(1)(2) 都是词 # pulse, slim
+  - (2)(4)(6)(7)(4)(2), (2)(1)(6)(6)(1)(5)(7) 都是词 # museum, missile
 
 - id: 2-3
   clue: =*==*==
   answer: digraph
   meaning: n. [数] 有向图
   hints:
-  - 图论，名词
+  - 数学，名词
   - (2)(7)(3) 构成等差数列
   - (1)(7)(6) 构成等比数列
   - 序数最大的字母与唯一的素数相邻
@@ -249,6 +250,7 @@
   - (4)=(2)×2, (6)=(4)+2
   - 序数最大的字母的右侧是平方数
   - (3)(2) 是前缀，(5)(4) 是后缀 # bi, ar
+  - (4)(5)(3)(3)(2)(6) 是一个词 # rabbit
 
 - id: 2-5
   clue: =*=*=
@@ -256,7 +258,8 @@
   meaning: n. [物] 介子
   hints:
   - 物理学，名词
-  - 只有 (1)(2)(3) 是素数
+  - 共有 3 个素数，它们全部相邻
+  - 共有 3 个中心对称字母，它们全部相邻
   - (1)(5)(4) 构成等差数列
   - (1)(2)(3)(3), (3)(4)(4)(5) 都是词 # mess, soon
 
@@ -266,7 +269,7 @@
   meaning: adj. [数] 周期性的；[化] 高碘酸的
   hints:
   - 数学，化学，形容词
-  - 共有 (6) 个平方数
+  - 最大字母左侧是唯一不能一笔画出的字母
   - (8)(6)(2) 是连续的字母
   - (1)(2)(3)(4)(5)(6) 是数学术语 # period
   - (4)(5)(6)(7)(8) 是化学术语 # iodic
@@ -277,7 +280,7 @@
   meaning: n. [数][物] 振幅
   hints:
   - 数学，物理学，名词
-  - 元音互不相同
+  - 所有字母互不相同
   - 共有 4 个平方数
   - (6)(7), (8)(9) 都是连续的字母
   - (1)(2)(3)(4)(9), (1)(4)(6)(5)(6)(7)(8)(9) 都是词 # ample, altitude
@@ -288,20 +291,21 @@
   meaning: n. [数] 分母
   hints:
   - 数学，名词
+  - 最小字母在最大字母左侧
   - (3)(7) 相同，(4)(10) 相同
   - (1)+5=(6), (4)+5=(9), (7)+4=(11)
-  - (1)(4)(5)(6)(7)(8)(9)(10)(11) 是一个词 # dominator
+  - (1)(4)(5)(6)(7)(8)(9)(10)(11) 是数学术语 # dominator
 
 - id: 2-9
   clue: =*=*=*=*
   answer: polarize
-  meaning: n. [化] 极化
+  meaning: v. [化] 极化
   hints:
   - 化学，动词
   - 所有字母互不相同
   - 最大字母右侧是唯一的素数
   - (5)(2)(3)(6) 构成等差数列
-  - (1)(2)(3)(4)(5) 是一个词 # polar
+  - (1)(4)(5)(4)(3)(3)(8)(3) 是数学术语 # parallel
 
 - id: 2-10
   clue: ==*==*
@@ -311,9 +315,9 @@
   - 物理学，生物学，名词
   - 共有 2 个素数，且它们相邻
   - 共有 3 个平方数，且它们互不相邻
-  - (5)(1)(4) 构成等差数列
-  - (4)(2)(3)(5) 是一个词 # slam
   - 一个字母是辅音当且仅当其能一笔画出
+  - (5)(1)(4) 构成等差数列
+  - (1)(3)(2)(5), (2)(3)(5)(1) 都是词 # palm, lamp
 
 - id: 2-11
   clue: =*==*=*=*
@@ -321,7 +325,7 @@
   meaning: n. [数] 曲率
   hints:
   - 数学，名词
-  - 有一对相邻字母各出现了 2 次
+  - 有一对相邻字母出现了 2 次
   - (1)(5)(9), (2)(4)(6), (4)(6)(8) 排序后都构成等差数列
   - (6)(3)(5)(1)(9), (5)(1)(7)(6)(9) 都是数学术语 # trace, acute
 
@@ -352,7 +356,8 @@
   category: 害羞的元音
   hints:
   - 计算机，名词
-  - (2) 是唯一的合数
+  - 唯一的合数等于其两侧字母之和
+  - 一个字母能一笔画出当且仅当它带弧线
   - (1)(5)(4) 构成等差数列
   - (3)(2)(2)(3)(4)(5) 是一个词 # attack
 
@@ -722,7 +727,7 @@
   - 数学，名词
   - 共有 6 种字母出现了至少 2 次
   - 共有 4 种偶数，在第一个词里全部出现过
-  - 某一个词有前缀，另一个词有后缀
+  - 某一个词有前缀，另一个词有后缀 # sym, al
   - (1)+2=(3), (2)+10=(12), (7)+4=(11)
   - (1)(2)(3), (6)(7)(8), (16)(17)(18), (14)(15)(16)(15)(17) 都是词 # rot, ion, try, meter
 
@@ -790,7 +795,7 @@
   - 共有 3 种字母出现 2 次
   - 共 8 个合数，其和为 128
   - 共 8 个合数位，其和为 110
-  - 第一个词以某个前缀开头，第二个词以某个后缀结尾
+  - 第一个词以某个前缀开头，第二个词以某个后缀结尾 # com, er
   - (1)(2)(3)(4)(5)(6)(14)(15)，(1)(11)(1)(11)(12)(13)(14)(15) 词 # composer, cucumber
 
 - id: 5-9
@@ -936,7 +941,7 @@
   info: (x)=s
   hints:
   - 几何，数论，形容词
-  - 存在前缀和后缀
+  - 存在前缀和后缀 # con, ent
   - 共有 9 个字母
   - 序数最大的辅音是 (5) 的倍数
   - (3,1)=(6,1)=2×(3,2)
@@ -1161,7 +1166,7 @@
   info: 3
   hints:
   - 生物，名词
-  - 只有 (2)(4) 不能一笔画
+  - 只有 (2)(4) 不能一笔画出
   - 刹车板序号为 (1)-(7)
   - 刹车板左侧是最小字母，右侧是最大字母
   - (3)(5)(6)，(2)(5)(1) 等差
@@ -1673,7 +1678,7 @@
   - 第一个词中素数之和为 70，第二个词中元音之和为 30
   - (1)(17) 相同，(2)(9) 相同，(3)(16) 相同，(6)(8) 相同
   - (5)(14)(18), (9)(10)(11) 经排序都是连续的字母
-  - (1)(2)(3) 是前缀，(16)(17)(18) 是后缀
+  - (1)(2)(3) 是前缀，(16)(17)(18) 是后缀 # iso, oid
   - (5)(6)(7)(7), (7)(8)(9)(9), (10)(11)(12)(13) 都是词
   solution:
   - 由于 (5)(6)(7)(7), (7)(8)(9)(9) 都是词，因此 (7),(9) 很可能是 e,f,l,s。
@@ -2142,7 +2147,7 @@
   category: 过度害羞的元音
   hints:
   - 化学，名词
-  - 原词有前缀和后缀
+  - 原词有前缀和后缀 # meta, oid
   - 原词共有 t 个元音，t 个 t 的倍数
   - (t) 出现了 2 次
   - (2)(3)(5) 构成等差数列
@@ -2195,7 +2200,7 @@
   - (1)(4) 相同，(2)(5) 相同
   - 不带弧线字母的序数是序号的两倍
   - 原词中共有 4 个元音，互不相同，互不相邻
-  - 原词前两个字母是前缀，后两个字母是后缀
+  - 原词前两个字母是前缀，后两个字母是后缀 # re, al
   - 原词中最大元音左侧是最大辅音，最小元音左侧是最小辅音
 
 - id: 13-10
