feat: migrate to alias

--- a/src/data/chapters.yml
+++ b/src/data/chapters.yml
@@ -183,7 +183,7 @@
   - - ~*~*=*~ (consonant)
     - 你看不到这个单词中的一些辅音，是因为他们或许在做一些“不可描述”的事情。辅音做这种事情通常是违背道德的，所以他们需要一块遮羞布。当然，也有的辅音光明正大地站出来（或许他们比较直吧（划掉））。
   - - 我们不知道每块遮羞布后面有几个辅音，但我们确信每块都有，也许是一个（天知道 1 个辅音在遮羞布后面做什么），也可能很多（天知道 6 个辅音在遮羞布后面做什么）。条件有时会告诉你一共有多少个字母，这可以帮助你判断一共有多少个辅音藏了起来。
-    - 小练习：找到一个有 6 个相邻字母都是辅音的单词。
+    - 小练习：找到一个有连续 6 个相邻字母都是辅音的单词。
   - - 关于遮羞布（以上面的词为例）
     - 1. 用 ~ 表示一块遮羞布，也像之前一样有自己的序号。这里 (5)(6)(7) 分别表示 n, a, nt。
     - 2. 用 (7,2) 表示 (7) 中的第 2 个字母，也就是 t；用 (1,-1) 表示 (1) 中的倒数第 1 个字母，也就是 c。
@@ -200,9 +200,9 @@
     - 你并非字母家族的一员，无法分辨字母和刹车板的区别，但你又不想吃得满嘴金属渣，所以你需要使用洪荒之力（以及我们好心提供的提示）辨认出那个冒牌货，并铲掉这个万恶的词。
     - 注意：爱打扮的元音也可能会给偷来的刹车板一朵 * 形的小花。除此以外，在我们宽宏大量慷慨施予的条件中，有一些关于刹车板的特殊规则需要你了解。
   - - 关于刹车板
-    - 1. 如果条件中出现的序号在条件中必不可少，即删去后条件无意义，则该序号不可能是刹车板。比如：(3) 是素数（仅限一个数的情况），(1)(2)相同（仅限两个数的情况），(6)(8)(10) 构成勾股数，(4)+5=(9)，所有的辅音都是 (7) 的倍数，等等。
+    - 1. 如果条件中出现的序号在条件中必不可少，即删去后条件无意义，则该序号不可能是刹车板。比如：(3) 是素数（仅限一个数的情况），(1)(2) 相同（仅限两个数的情况），(6)(8)(10) 构成勾股数，(4)+5=(9)，所有的辅音都是 (7) 的倍数，等等。
     - 2. 如果条件中出现的某个序号被删去后仍然有意义，那么这个序号有可能是刹车板。如果是，则在解读时应将其删去。比如条件 (4)(5)(6)(7) 构成等差数列中，如果 (5) 是刹车板，那么真实的情况是 (4)(6)(7) 构成等差数列。（如果条件中只有三个数构成等差数列，我们仍然认为其中可能存在刹车板。因为事实上两个数构成等差数列仍然有意义，只不过不能提供任何信息罢了。）
-    - 3. 刹车板属于字母，因此被刹车板分隔的两个字母不算相邻，但是刹车板没有字母形状和序数，因此不计入任何正面计数（素数/合数/元素名/元音/清辅音/……），计入任何含有“不”的计数（不发音/不是平方数/不轴对称/……）。当涉及求和时刹车板视为 0，当涉及求积时刹车板视为 1。
+    - 3. 刹车板属于字母，因此被刹车板分隔的两个字母不算相邻。刹车板没有字母形状和序数，因此不计入任何正面计数（素数/合数/元素名/元音/清辅音/……），计入任何含有“不”的计数（不发音/不是平方数/不轴对称/……）。当涉及求和时刹车板视为 0，当涉及求积时刹车板视为 1。
     - 4. 如果出现了“只有……是……”或“……是唯一的……”这类条件，你会注意到在这种情况下，使用上述第二条和第三条会产生矛盾。于是，刹车板就像一个幽灵徘徊在判定边缘，谁也不知道它到底算不算满足条件，它爱在哪在哪。
 
 - id: Chapter-7.5
