--- a/src/data/questions.yml
+++ b/src/data/questions.yml
@@ -6,7 +6,7 @@
   - 数学，名词
   - (2)(5)(8) 相同，其他字母各不相同
   - (3)(4)(5)(4)(5), (3)(4)(5)(5)(6) 都是词 # queue, queen
-  - (1)(2)(6)(1)(8), (1)(7)(8)(6)(5) 是一个词 # sense, scene
+  - (1)(2)(6)(1)(8), (1)(7)(8)(6)(5) 都是词 # sense, scene
   - (7)*(6)(1)(2)(3)(4)(5)(6)(7)(8) 是一个词 # consequence
 
 - id: 1-2
@@ -472,7 +472,7 @@
   category: 害羞的元音
   hints:
   - 计算机，名词
-  - 一个字母是元音，当且仅当其右侧字母不是平方数
+  - 一个字母是元音，当且仅当其右侧字母不是平方数，当前仅当其左侧字母不轴对称
   - (2)(5), (1)(2)(5), (1)(2)(3)(5), (1)(2)(3)(5)(6) 都是词 # at, pat, part, party
 
 - id: 3.5-1
@@ -1083,7 +1083,7 @@
   answer: crystal
   meaning: n. [物][化] 晶体
   category: 神的刹车板
-  info: 3
+  info: '3'
   hints:
   - 物理学，化学，名词
   - 刹车板序号为 (1)
@@ -1096,7 +1096,7 @@
   answer: bootstrap
   meaning: n. [计] 引导程序
   category: 神的刹车板
-  info: 9
+  info: '9'
   hints:
   - 计算机，名词
   - (2)+(8)=(10)
@@ -1110,7 +1110,7 @@
   answer: convolution
   meaning: n. [数][计] 卷积
   category: 神的刹车板
-  info: 11
+  info: 11, (x)=e
   hints:
   - 数学，计算机，名词
   - 只有 (6)(8) 不是元素名
@@ -1217,7 +1217,7 @@
   answer: hierarchy
   meaning: n. [计] 层次结构
   category: 神的刹车板
-  info: 8
+  info: 8, (x)=c
   hints:
   - 计算机，名词
   - 共有 2 个字母出现了 2 次
@@ -1778,10 +1778,10 @@
 - id: 10-6
   clue: =*=*= =*==== -> ===== ==*=**
   answer: focal length
-  meaning: n. [数] 焦距
+  meaning: n. [数][物] 焦距
   category: 双生的单词 × 跃迁的字母
   hints:
-  - 物理学，名词
+  - 数学，物理学，名词
   - (8)[9] 相同，[4](11) 相同
   - 每个词中出现的元音字母都互不相同
   - (3)(4)(5)(6), (6)(7)[5][6] 都是词
