feat: add solutions

--- a/src/data/questions.yml
+++ b/src/data/questions.yml
@@ -8,6 +8,12 @@
   - (3)(4)(5)(4)(5), (3)(4)(5)(5)(6) 都是词 # queue, queen
   - (1)(2)(6)(1)(8), (1)(7)(8)(6)(5) 都是词 # sense, scene
   - (7)*(6)(1)(2)(3)(4)(5)(6)(7)(8) 是一个词 # consequence
+  solution:
+  - 首先根据原词末尾是元音，推测 (8)=e，从而有 (2)=(5)=e。
+  - 由于 (3)(4)(5)(4)(5) 这个词末尾 4 个字母均为元音，容易联想到 queue，因此 (3)(4)=qu。
+  - 再根据 (3)(4)(5)(5)(6) 是一个词，得到 (6)=n。
+  - 剩下的两个字母 (1)(7) 可以从条件 3 或者原词中看出。
+  - 综上，本题的答案为 sequence。
 
 - id: 1-2
   clue: '*==*==*'
@@ -25,10 +31,17 @@
   meaning: n. [数] 多项式
   hints:
   - 数学，名词
-  - (2)(6) 相同
+  - (2)(6), (3)(10) 分别相同
   - (1)(2)(3)(4), (7)(6)(5)(6) 都是前缀 # poly, mono
-  - (7)(9)(8)(10), (10)(8)(3)(4) 都是词 # mail, lily
+  - (7)(9)(8)(10), (3)(8)(3)(4) 都是词 # mail, lily
   - (1)(2)(3)(5)(7) 经排序是连续的字母
+  solution:
+  - 根据条件 2，可以将条件 5 中的 (2) 替换成 (6)，得出 (1)(3)(5)(6)(7) 排序后连续。
+  - 再结合 (7)(6)(5)(6) 是前缀和元音构成，不难得出这个前缀是 mono，由此 (5)(6)(7)=nom。
+  - 此时 (1)(3) 只能取自 k,l,p,q，因此 (1)(2)(3)(4) 这个前缀只能是 poly，由此 (1)(3)=pl。
+  - 由于 (3)(8)(3)(4) 是词，因此 (8)=i。
+  - 由于 (7)(9)(8)(10) 是词，因此 (9)=a。
+  - 综上，本题的答案为 polynomial。
 
 - id: 1-4
   clue: =*==*=*=**=
@@ -90,8 +103,13 @@
   - 几何学，名词
   - 所有字母互不相同
   - (1)(8)(2) 是连续的字母
-  - (4)(5)(7) 是前缀，(6)(7)(8) 是后缀 # oid
+  - (4)(5)(7) 是前缀，(6)(7)(8) 是后缀 # tri, oid
   - (8)(6)(1)(4)(5)(7)(3)(2) 是一个词 # doctrine
+  solution:
+  - 根据条件 5 结尾元音推测 (2)=e。再结合条件 3 可知 (1)(8)=cd。
+  - 由于 (6)(7)(8) 是后缀可知 (6)(7)=oi。
+  - 由于 (4)(5)(7) 是前缀可知 (4)(5)=tr。
+  - 最后结合条件 5 和原词可知答案为 centroid。
 
 - id: 1-10
   clue: '*=**=**='
@@ -102,6 +120,12 @@
   - 所有字母互不相同
   - (4)(8)(5)(6)(2)(3)(1) 是一个词 # antique
   - (2)(3)(6)(1)(5), (2)(3)(6)(5)(1) 都是词 # quiet, quite
+  solution:
+  - 由于所有字母互不相同，结合原词中共有 5 个元音可知，aeiou 各出现了一次。
+  - 根据 (2)(3)(6)(5)(1) 的词尾元音可以推测 (1)=e。
+  - 再根据 (4)(8)(5)(6)(2)(3)(1) 的词尾双元音可以推测 (3)=u，进而联想到 (2)=q。
+  - 由于 (2)(3)(6)(1)(5), (2)(3)(6)(5)(1) 都是词，不难看出 (6)(5)=it。
+  - 将这些字母带回原词，不难看出答案为 equation。
 
 - id: 1-11
   clue: '*==**=*='
@@ -112,6 +136,12 @@
   - 所有字母各不相同
   - (3)(4)(5)(6) 是数学术语，(3)(5)(6)(7) 是化学术语 # bias, base
   - (3)(1)(6)(4)(2)(7)(6)(6) 是一个词 # business
+  solution:
+  - 首先原词和 (3)(4)(5)(6) 都是数学术语，因此它们很可能是相关的词。(1)(2) 可能是前缀，(7)(8) 可能是后缀。
+  - 根据 (3)(5)(6)(7) 词尾元音推测 (7)=e；结合原词是形容词，推测 (7)(8)=ed。
+  - 注意到条件 4 的词尾有两个相同辅音字母，大概率是 ll,ss。
+  - 由于所有字母均不相同，排除 e 后不难发现 (1)(2) 应该是 un,a=,i= 之类的否定前缀，推测 (2)=l,m,n,r。
+  - 将上面的结论带入条件 4，不难看出是 business，从而原词为 unbiased。
 
 - id: 1-12
   clue: '*==*=*=='
@@ -122,6 +152,11 @@
   - (1)(3)(5) 经排序是连续的字母
   - (1)(2), (3)(4), (5)(6) 都是前缀 # en, co, di
   - (3)(4)(6)(7)(3)(6)(5)(1)(2)(3)(1) 是一个词 # coincidence
+  solution:
+  - 根据条件 4 的词尾元音推测 (1)=e。
+  - 结合条件 2 可知 (3)(5) 只能取自 c,d,f,g。
+  - 又因为 (3)(4), (5)(6) 都是前缀，这样的前缀只有 co,di,de。
+  - 此时原词为 e=code==, e=codi==, e=deco==, e=dico==，不难看出答案为 encoding。
 
 - id: 1.5-1
   answer: altitude
@@ -1824,7 +1859,7 @@
   - 若 [1] 为辅音，则基本可以断定 [5][7] 是元音，[7]=e，由 (3)(6)(5)(4) 是词知 (5)(4) 可能的组合基本只有 ee, ea, ue，而 (4)+(6)=(7)，故只可能是 ea，(6)=d。而 (3)(6) 是词首辅音丛，(6) 不可能是 d，矛盾。故 [1] 为元音。
   - 由 (1)(5)(6)(1) 是词知 [1]=a,e，由 (1)(5)(6)(1)(7) 词知 [7] 基本不可能为元音，故还有一个元音是 [5] 或 [6]。由于 (3)(6)(5)(4), (3)(1)(6)(5)(4) 都是词，故 [5] 基本可以断定不是元音，故 [6] 是元音。
   - 由于 [1][4][6] 等差，可能的情形为 aaa, aei 或 eee。由于 (1)(5)(6)(1)(7) 词，(4)+(6)=(7)，故 [1][4][6] 只可能是aei，(7) 是 n。
-  - 由于 a(5)ia 和 a(5)ian 都是词，(5)只可能是 s；由于 (3)ise 和 (3)aise 都是词，(3) 只可能是r。
+  - 由于 a(5)ia 和 a(5)ian 都是词，(5)只可能是 s；由于 (3)ise 和 (3)aise 都是词，(3) 只可能是 r。
   - 由于 (3) 两侧都不是合数，故只可能是 [2] 或 [3]。[3][5][6] 等差，故 [3] 为奇数，故 (3)r 的位置是 [2]，[3] 为奇素数。
   - 又因为 (2) 是最小辅音且在 (6) 右侧，故位置为 [7]，从而 [3] 的序数应大于等于 14。符合约束条件及构词规则的 [3] 只有s。
   - 因此，(7)n 的位置只能是 [5]。由构词法确定 [7] 最可能是 c，故原词为 arsenic。
@@ -1842,7 +1877,7 @@
   - 新词中共有 2 个字母的序号等于序数
   - (4)+5=[9], [5]+3=[8]
   solution:
-  - 根据条件 2，这个元素名只能是 bcfhi，又因为 [8] 出现在等式中，所以刹车板序号只能是 2,3,6,9。
+  - 根据条件 2，这个元素名只能是 b,c,f,h,i，又因为 [8] 出现在等式中，所以刹车板序号只能是 2,3,6,9。
   - 根据条件 3 可知有一个元音是刹车板，因此刹车板序号只能是 2,3,4,5,6,8,10，从而刹车板序号只能是 2,3,6。
   - 根据条件 5 和元音位置，可知 [2]=b, [4]=d, [5]=e, [7]=g, [8]=h 中恰好有两个成立。
   - 根据条件 4，[7] 不可能为 g，又因为 [5]+3=[8]，因此要么 [2]=b, [4]=d，要么 [5]=e, [8]=h。
